--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@ a:hover{
 }
 
 .link a:hover{
-  background: #B3CEE5;
+  background: #DCFF93;
   color: #363845 !important;
   text-decoration: none;
 }
