--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,16 @@
 @import url('https://use.typekit.net/tsb3vax.css');
 
-*{
+* {
   cursor: default;
 }
 
-::selection{
+::selection {
   background: #B3CEE5;
   color: #363845;
 }
 
 h1, h4, h5 {
-  font-family: ivypresto-display;
+  font-family: ivypresto-display, serif;
   font-weight: 300;
 }
 
@@ -30,18 +30,18 @@ a {
   transition: .3s;
 }
 
-a:hover{
+a:hover {
   background: none;
   color: #B3CEE5 !important;
   text-decoration: none;
   cursor: alias;
 }
 
-.link a{
+.link a {
   color: #B3CEE5 !important;
 }
 
-.link a:hover{
+.link a:hover {
   background: #B5E5B3;
   color: #363845 !important;
   text-decoration: none;
@@ -53,6 +53,14 @@ hr {
   background-color: #999999;
 }
 
-#MainMenu {visibility: hidden;}
-footer {visibility: hidden;}
-header {visibility: hidden;}
+#MainMenu {
+  visibility: hidden;
+}
+
+footer {
+  visibility: hidden;
+}
+
+header {
+  visibility: hidden;
+}
